tests/ui/rfcs/rfc-2093-infer-outlives/regions-outlives-nominal-type-region-rev.stderr
error[E0491]: in type `&'a Foo<'b>`, reference has a longer lifetime than the data it references
  --> $DIR/regions-outlives-nominal-type-region-rev.rs:17:9
   |
LL |         type Out = &'a Foo<'b>;
   |         ^^^^^^^^
   |
note: the pointer is valid for the lifetime `'a` as defined here
  --> $DIR/regions-outlives-nominal-type-region-rev.rs:16:10
   |
LL |     impl<'a, 'b> Trait<'a, 'b> for usize {
   |          ^^
note: but the referenced data is only valid for the lifetime `'b` as defined here
  --> $DIR/regions-outlives-nominal-type-region-rev.rs:16:14
   |
LL |     impl<'a, 'b> Trait<'a, 'b> for usize {
   |              ^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0491`.
